KGIL-202/artifacts/kongair/routes-service-with-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kongair-routes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kongair-routes
  template:
    metadata:
      labels:
        app: kongair-routes
    spec:
      containers:
      - name: kongair-routes
        image: kongedu/kongair-routes:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kongair-routes
  labels:
    app: kongair-routes
spec:
  selector:
    app: kongair-routes
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 5053
       
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong
spec:
  gatewayClassName: kong
  listeners:
  - name: proxy
    port: 80
    protocol: HTTP
  - name: proxy-ssl
    port: 443
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: kongair-routes
spec:
 parentRefs:
 - name: kong
 rules:
 - matches:
   - path:
       type: PathPrefix
       value: /routes
   backendRefs:
   - name: kongair-routes
     kind: Service
     port: 5053
